<resources>
    <string name="app_name">Football Quiz</string>
    <string name="heading_textview">Welcome to the World Cup predict and win trivia</string>
    <string name="userName">Name</string>
    <string name="question1">1. How many teams are participating in the Russia 2018 World Cup?</string>
    <string name="radiobutton1_q1">16</string>
    <string name="radiobutton2_q1">32</string>
    <string name="radiobutton3_q1">48</string>
    <string name="question2">2. How many teams are eliminated in the group stages?</string>
    <string name="radiobutton1_q2">16</string>
    <string name="radiobutton2_q2">32</string>
    <string name="radiobutton3_q2">48</string>
    <string name="question3">3. In which month did the world cup began?</string>
    <string name="radiobutton1_q3">May</string>
    <string name="radiobutton2_q3">June</string>
    <string name="radiobutton3_q3">July</string>
    <string name="question4">4. Which country won the 2014 World Cup tropghy?</string>
    <string name="resetscore_button">Reset Score</string>
    <string name="submit_button">Submit</string>

</resources>
