<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/heading_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/heading_textview"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/userName"
            android:inputType="textCapWords"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="8dp">
                
                <TextView
                    android:id="@+id/question1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" 
                    android:text="@string/question1"/>

                <RadioGroup
                    android:id="@+id/radiogroup_q1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radiobutton1_q1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/radiobutton1_q1"/>
                    <RadioButton
                        android:id="@+id/radiobutton2_q1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/radiobutton2_q1"/>
                    <RadioButton
                        android:id="@+id/radiobutton3_q1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/radiobutton3_q1"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/question2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question2"/>
                <RadioGroup
                    android:id="@+id/radiogroup_q2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radiobutton1_q2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/radiobutton1_q2"/>
                    <RadioButton
                        android:id="@+id/radiobutton2_q2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/radiobutton2_q2"/>
                    <RadioButton
                        android:id="@+id/radiobutton3_q2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/radiobutton3_q2"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/question3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question3"/>

                <RadioGroup
                    android:id="@+id/radiogroup_q3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radiobutton1_q3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/radiobutton1_q3" />

                    <RadioButton
                        android:id="@+id/radiobutton2_q3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/radiobutton2_q3" />

                    <RadioButton
                        android:id="@+id/radiobutton3_q3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/radiobutton3_q3" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/question4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question4"/>

                <EditText
                    android:id="@+id/edittext_q4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/submit_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit_button"
                android:onClick="totalScore"/>


            <Button
                android:id="@+id/resetscore_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAllCaps="true"
                android:text="@string/resetscore_button"
                android:onClick="resetScore"/>
        </LinearLayout>


        <TextView
            android:id="@+id/totalscore_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:gravity="center"/>
    </LinearLayout>
</ScrollView>